// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`History tests should get histories data match with snapshots - 006912563 1`] = `
{
  "abnStatus": [
    {
      "from": "03 Feb 2000",
      "to": "(current)",
      "value": "Active",
    },
  ],
  "businessLocation": [
    {
      "from": "22 Sep 2014",
      "to": "(current)",
      "value": "VIC 3105",
    },
    {
      "from": "14 Jan 2014",
      "to": "22 Sep 2014",
      "value": "VIC 3105",
    },
    {
      "from": "02 Sep 2003",
      "to": "14 Jan 2014",
      "value": "VIC 3105",
    },
    {
      "from": "03 Feb 2000",
      "to": "02 Sep 2003",
      "value": "VIC 3105",
    },
  ],
  "businessName": [
    {
      "from": "13 Oct 2011",
      "to": "(current)",
      "value": "TUBEPAK",
    },
    {
      "from": "15 Nov 2011",
      "to": "17 Feb 2021",
      "value": "TUBEPAK",
    },
    {
      "from": "24 Oct 2011",
      "to": "17 Feb 2021",
      "value": "TUBEPAK",
    },
    {
      "from": "18 Oct 2011",
      "to": "17 Feb 2021",
      "value": "TUBEPAK",
    },
    {
      "from": "",
      "to": "",
      "value": "006 912 563 View record on the ASIC website",
    },
    {
      "from": "",
      "to": "",
      "value": "Not entitled to receive tax deductible gifts",
    },
  ],
  "entityName": [
    {
      "from": "01 Jun 2000",
      "to": "(current)",
      "value": "SONOCO AUSTRALIA PTY. LTD.",
    },
    {
      "from": "03 Feb 2000",
      "to": "01 Jun 2000",
      "value": "SONOCO AUSTRALIA P/L",
    },
  ],
  "entityType": [
    {
      "from": "",
      "to": "",
      "value": "Australian Private Company",
    },
  ],
  "gstStatus": [
    {
      "from": "01 Jul 2000",
      "to": "(current)",
      "value": "Registered",
    },
  ],
}
`;

exports[`History tests should get histories data match with snapshots - 15 035 513 435 1`] = `
{
  "abnStatus": [
    {
      "from": "06 Jul 2006",
      "to": "(current)",
      "value": "Active",
    },
  ],
  "businessLocation": [
    {
      "from": "27 Oct 2020",
      "to": "(current)",
      "value": "SA 5352",
    },
    {
      "from": "10 Sep 2014",
      "to": "27 Oct 2020",
      "value": "SA 5352",
    },
    {
      "from": "19 Sep 2008",
      "to": "10 Sep 2014",
      "value": "SA 5352",
    },
    {
      "from": "24 Apr 2008",
      "to": "19 Sep 2008",
      "value": "SA 5355",
    },
    {
      "from": "06 Jul 2006",
      "to": "24 Apr 2008",
      "value": "SA 5352",
    },
  ],
  "businessName": [
    {
      "from": "29 Oct 2019",
      "to": "(current)",
      "value": "Barossa Australia",
    },
    {
      "from": "20 Oct 2018",
      "to": "(current)",
      "value": "Barossa Wine School",
    },
    {
      "from": "08 Aug 2018",
      "to": "(current)",
      "value": "BGWA",
    },
    {
      "from": "",
      "to": "",
      "value": "From 1 November 2025, ABN Lookup will not display trading names and will only display registered business names. For more information, click help.",
    },
  ],
  "entityName": [
    {
      "from": "14 Sep 2023",
      "to": "(current)",
      "value": "BAROSSA AUSTRALIA INCORPORATED",
    },
    {
      "from": "24 Oct 2011",
      "to": "14 Sep 2023",
      "value": "BAROSSA GRAPE AND WINE ASSOCIATION INCORPORATED",
    },
    {
      "from": "19 Sep 2008",
      "to": "24 Oct 2011",
      "value": "BAROSSA GRAPE AND WINE ASSOCIATION",
    },
    {
      "from": "25 Feb 2008",
      "to": "19 Sep 2008",
      "value": "Barossa Grape and Wine Association",
    },
    {
      "from": "11 Sep 2006",
      "to": "25 Feb 2008",
      "value": "Barossa Grape and Wine Association",
    },
    {
      "from": "06 Jul 2006",
      "to": "11 Sep 2006",
      "value": "Barossa Wine Grapegrowers Steering Committee",
    },
  ],
  "entityType": [
    {
      "from": "",
      "to": "",
      "value": "Other Incorporated Entity",
    },
  ],
  "gstStatus": [
    {
      "from": "01 Oct 2007",
      "to": "(current)",
      "value": "Registered",
    },
  ],
  "tradingName": [
    {
      "from": "19 Sep 2008",
      "to": "(current)",
      "value": "BAROSSA GRAPE AND WINE ASSOCIATION",
    },
    {
      "from": "27 Aug 2008",
      "to": "19 Sep 2008",
      "value": "Barossa Grape and Wine Association",
    },
    {
      "from": "",
      "to": "",
      "value": "Not entitled to receive tax deductible gifts",
    },
  ],
}
`;

exports[`History tests should get histories data match with snapshots - 35 460 201 920 1`] = `
{
  "abnStatus": [
    {
      "from": "23 Jun 2017",
      "to": "(current)",
      "value": "Cancelled",
    },
    {
      "from": "18 Aug 2011",
      "to": "23 Jun 2017",
      "value": "Active",
    },
  ],
  "businessLocation": [
    {
      "from": "16 Sep 2014",
      "to": "(current)",
      "value": "WA 6017",
    },
    {
      "from": "18 Aug 2011",
      "to": "16 Sep 2014",
      "value": "WA 6017",
    },
    {
      "from": "",
      "to": "",
      "value": "From 1 November 2025, ABN Lookup will not display trading names and will only display registered business names. For more information, click help.",
    },
  ],
  "entityName": [
    {
      "from": "18 Aug 2011",
      "to": "(current)",
      "value": "K.L CHOW & K.F HWANG & H WONG",
    },
  ],
  "entityType": [
    {
      "from": "",
      "to": "",
      "value": "Other Partnership",
    },
  ],
  "gstStatus": [
    {
      "from": "",
      "to": "",
      "value": "No current or historical GST registrations",
    },
  ],
  "tradingName": [
    {
      "from": "18 Aug 2011",
      "to": "(current)",
      "value": "faith kolly Hwang.Hong peng kevin Wong. kok leong Chow",
    },
    {
      "from": "18 Aug 2011",
      "to": "(current)",
      "value": "CK2 cleaning services",
    },
    {
      "from": "",
      "to": "",
      "value": "Not entitled to receive tax deductible gifts",
    },
  ],
}
`;

exports[`History tests should get histories data match with snapshots - 45 004 189 708 1`] = `
{
  "abnStatus": [
    {
      "from": "14 Feb 2000",
      "to": "(current)",
      "value": "Active",
    },
  ],
  "businessLocation": [
    {
      "from": "05 Jul 2017",
      "to": "(current)",
      "value": "VIC 3123",
    },
    {
      "from": "04 Jan 2017",
      "to": "05 Jul 2017",
      "value": "VIC 3123",
    },
    {
      "from": "30 Nov 2016",
      "to": "04 Jan 2017",
      "value": "VIC 3123",
    },
    {
      "from": "23 Nov 2016",
      "to": "30 Nov 2016",
      "value": "VIC 3123",
    },
    {
      "from": "14 Feb 2000",
      "to": "23 Nov 2016",
      "value": "VIC 3146",
    },
  ],
  "businessName": [
    {
      "from": "15 Dec 2017",
      "to": "(current)",
      "value": "COLES LOCAL",
    },
    {
      "from": "27 Apr 2012",
      "to": "(current)",
      "value": "MIX APPAREL",
    },
    {
      "from": "16 Feb 2004",
      "to": "(current)",
      "value": "COLES CENTRAL",
    },
    {
      "from": "14 Feb 2000",
      "to": "(current)",
      "value": "COLES ONLINE",
    },
    {
      "from": "14 Feb 2000",
      "to": "(current)",
      "value": "COLES SUPERMARKETS",
    },
    {
      "from": "14 Feb 2000",
      "to": "(current)",
      "value": "PICK 'N' PAY",
    },
    {
      "from": "18 Jul 2007",
      "to": "29 Dec 2016",
      "value": "COLES CENTRAL",
    },
    {
      "from": "31 May 2007",
      "to": "02 Sep 2010",
      "value": "COLES CENTRAL",
    },
    {
      "from": "28 May 2007",
      "to": "29 Dec 2016",
      "value": "COLES CENTRAL",
    },
    {
      "from": "25 Jul 2006",
      "to": "31 Aug 2009",
      "value": "KENNEDY'S KUNUNURRA NEWSAGENCY",
    },
    {
      "from": "17 Dec 2004",
      "to": "28 Apr 2008",
      "value": "COLES MYER SUPERMARKETS",
    },
    {
      "from": "17 Dec 2004",
      "to": "18 Feb 2008",
      "value": "COLES MYER SUPERMARKETS",
    },
    {
      "from": "15 Dec 2004",
      "to": "21 Jan 2008",
      "value": "COLES MYER SUPERMARKETS",
    },
    {
      "from": "14 Dec 2004",
      "to": "17 Mar 2008",
      "value": "COLES MYER SUPERMARKETS",
    },
    {
      "from": "30 Nov 2004",
      "to": "06 Jun 2008",
      "value": "COLES MYER SUPERMARKETS",
    },
    {
      "from": "16 Apr 2004",
      "to": "21 May 2007",
      "value": "COLES CENTRAL",
    },
    {
      "from": "12 Feb 2004",
      "to": "14 May 2007",
      "value": "COLES CENTRAL",
    },
    {
      "from": "13 Feb 2003",
      "to": "15 May 2012",
      "value": "SHOPFAST.COM.AU",
    },
    {
      "from": "06 Oct 2000",
      "to": "07 Oct 2006",
      "value": "COLES ONLINE BULK",
    },
    {
      "from": "14 Feb 2000",
      "to": "29 Dec 2016",
      "value": "COLES ONLINE",
    },
    {
      "from": "14 Feb 2000",
      "to": "29 Dec 2016",
      "value": "COLES ONLINE",
    },
    {
      "from": "14 Feb 2000",
      "to": "29 Dec 2016",
      "value": "COLES ONLINE",
    },
    {
      "from": "14 Feb 2000",
      "to": "29 Dec 2016",
      "value": "COLES ONLINE",
    },
    {
      "from": "14 Feb 2000",
      "to": "29 Dec 2016",
      "value": "COLES SUPERMARKETS",
    },
    {
      "from": "14 Feb 2000",
      "to": "29 Dec 2016",
      "value": "COLES SUPERMARKETS",
    },
    {
      "from": "14 Feb 2000",
      "to": "29 Dec 2016",
      "value": "COLES SUPERMARKETS",
    },
    {
      "from": "14 Feb 2000",
      "to": "29 Dec 2016",
      "value": "COLES SUPERMARKETS",
    },
    {
      "from": "14 Feb 2000",
      "to": "29 Dec 2016",
      "value": "COLES SUPERMARKETS",
    },
    {
      "from": "14 Feb 2000",
      "to": "29 Mar 2016",
      "value": "COLES SUPERMARKETS",
    },
    {
      "from": "14 Feb 2000",
      "to": "27 May 2012",
      "value": "COLES NEW WORLD SUPERMARKET",
    },
    {
      "from": "14 Feb 2000",
      "to": "20 Jul 2009",
      "value": "COLES SUPERMARKETS",
    },
    {
      "from": "14 Feb 2000",
      "to": "24 Apr 2006",
      "value": "ORD RIVER NEWSAGENCY",
    },
    {
      "from": "14 Feb 2000",
      "to": "03 Jun 2003",
      "value": "ESSENTIALLY ME",
    },
    {
      "from": "14 Feb 2000",
      "to": "14 May 2003",
      "value": "COLES MYER SUPERMARKETS",
    },
    {
      "from": "14 Feb 2000",
      "to": "11 Apr 2003",
      "value": "COLES MYER SUPERMARKETS",
    },
    {
      "from": "14 Feb 2000",
      "to": "04 Sep 2002",
      "value": "ESSENTIALLY ME",
    },
    {
      "from": "14 Feb 2000",
      "to": "13 Mar 2001",
      "value": "X'TRA VALU STORES",
    },
    {
      "from": "14 Feb 2000",
      "to": "28 Nov 2000",
      "value": "KENNEDYS NEWSAGENCY",
    },
    {
      "from": "14 Feb 2000",
      "to": "29 Sep 2000",
      "value": "FARMERS STORES OF W.A.",
    },
    {
      "from": "14 Feb 2000",
      "to": "13 Jun 2000",
      "value": "KENNEDYS OF BROOME",
    },
    {
      "from": "14 Feb 2000",
      "to": "18 Dec 2001",
      "value": "LET'S EAT",
    },
    {
      "from": "14 Feb 2000",
      "to": "15 Jul 2002",
      "value": "COLES FAST & FRESH",
    },
    {
      "from": "14 Feb 2000",
      "to": "15 Jul 2002",
      "value": "COLES FAST & FRESH",
    },
    {
      "from": "14 Feb 2000",
      "to": "10 May 2002",
      "value": "COLES FAST & FRESH",
    },
    {
      "from": "14 Feb 2000",
      "to": "06 Aug 2002",
      "value": "COLES FAST & FRESH",
    },
    {
      "from": "14 Feb 2000",
      "to": "06 Aug 2002",
      "value": "COLES FAST & FRESH",
    },
    {
      "from": "14 Feb 2000",
      "to": "25 Jun 2002",
      "value": "COLES FAST & FRESH",
    },
    {
      "from": "14 Feb 2000",
      "to": "05 Feb 2002",
      "value": "COLES FAST AND FRESH",
    },
    {
      "from": "14 Feb 2000",
      "to": "21 Oct 2004",
      "value": "COLES FAST & FRESH",
    },
    {
      "from": "14 Feb 2000",
      "to": "19 Jan 2014",
      "value": "COLES ONLINE",
    },
    {
      "from": "14 Feb 2000",
      "to": "19 Jan 2014",
      "value": "COLES ONLINE",
    },
    {
      "from": "14 Feb 2000",
      "to": "29 Oct 2007",
      "value": "COLES ONLINE",
    },
    {
      "from": "14 Feb 2000",
      "to": "29 Oct 2001",
      "value": "LET'S EAT",
    },
    {
      "from": "14 Feb 2000",
      "to": "02 Aug 2001",
      "value": "LET'S EAT",
    },
    {
      "from": "14 Feb 2000",
      "to": "08 Jan 2002",
      "value": "LET'S EAT",
    },
    {
      "from": "14 Feb 2000",
      "to": "15 Jan 2002",
      "value": "LET'S EAT",
    },
    {
      "from": "14 Feb 2000",
      "to": "03 Dec 2001",
      "value": "LET 'S EAT",
    },
    {
      "from": "14 Feb 2000",
      "to": "20 Aug 2001",
      "value": "CARNARVON FURNITURE & ELECTRICAL",
    },
    {
      "from": "14 Feb 2000",
      "to": "20 Aug 2001",
      "value": "MARGARET RIVER FURNITURE & ELECTRICAL",
    },
    {
      "from": "14 Feb 2000",
      "to": "12 Mar 2002",
      "value": "CHARLIE CARTERS",
    },
    {
      "from": "14 Feb 2000",
      "to": "20 Aug 2001",
      "value": "CHARLIE CARTERS COUNTRY STORES",
    },
    {
      "from": "14 Feb 2000",
      "to": "09 Aug 2001",
      "value": "XTRA VALU FOOD DISCOUNTERS",
    },
    {
      "from": "14 Feb 2000",
      "to": "25 Nov 2002",
      "value": "SEAVIEW LIQUOR STORE",
    },
    {
      "from": "14 Feb 2000",
      "to": "25 Jan 2001",
      "value": "CANDY LANE CHOCOLATES",
    },
    {
      "from": "14 Feb 2000",
      "to": "12 May 2001",
      "value": "LET'S EAT",
    },
    {
      "from": "14 Feb 2000",
      "to": "11 Feb 2003",
      "value": "COLES EXPRESS",
    },
    {
      "from": "14 Feb 2000",
      "to": "07 Feb 2003",
      "value": "COLES EXPRESS",
    },
    {
      "from": "14 Feb 2000",
      "to": "23 Apr 2003",
      "value": "COLES EXPRESS",
    },
    {
      "from": "14 Feb 2000",
      "to": "09 Jan 2003",
      "value": "COLES EXPRESS",
    },
    {
      "from": "14 Feb 2000",
      "to": "06 Dec 2002",
      "value": "COLES EXPRESS",
    },
    {
      "from": "14 Feb 2000",
      "to": "22 Aug 2002",
      "value": "PICK ' N ' PAY",
    },
    {
      "from": "14 Feb 2000",
      "to": "29 Nov 2000",
      "value": "HYPERAMA",
    },
    {
      "from": "14 Feb 2000",
      "to": "10 Aug 2000",
      "value": "CANDY LANE CHOCOLATES",
    },
    {
      "from": "14 Feb 2000",
      "to": "06 Aug 2001",
      "value": "GOODWAYS",
    },
    {
      "from": "14 Feb 2000",
      "to": "29 Dec 2016",
      "value": "COLES SUPERMARKETS",
    },
    {
      "from": "",
      "to": "",
      "value": "From 1 November 2025, ABN Lookup will not display trading names and will only display registered business names. For more information, click help.",
    },
  ],
  "entityName": [
    {
      "from": "14 Feb 2000",
      "to": "(current)",
      "value": "COLES SUPERMARKETS AUSTRALIA PTY LTD",
    },
  ],
  "entityType": [
    {
      "from": "",
      "to": "",
      "value": "Australian Private Company",
    },
  ],
  "gstStatus": [
    {
      "from": "01 Jul 2000",
      "to": "(current)",
      "value": "Registered",
    },
  ],
  "tradingName": [
    {
      "from": "14 Feb 2000",
      "to": "(current)",
      "value": "COLES SUPERMARKETS",
    },
    {
      "from": "14 Feb 2000",
      "to": "(current)",
      "value": "COLES EXPRESS",
    },
    {
      "from": "14 Feb 2000",
      "to": "(current)",
      "value": "COLES ONLINE",
    },
    {
      "from": "",
      "to": "",
      "value": "004 189 708 View record on the ASIC website",
    },
    {
      "from": "",
      "to": "",
      "value": "Not entitled to receive tax deductible gifts",
    },
  ],
}
`;

exports[`History tests should get histories data match with snapshots - 48 123 123 124 1`] = `
{
  "Replaces the following ABN(s) from 01 Nov 1999": [
    {
      "from": "",
      "to": "",
      "value": "61 814 236 264",
    },
  ],
  "abnStatus": [
    {
      "from": "01 Nov 1999",
      "to": "(current)",
      "value": "Active",
    },
  ],
  "businessLocation": [
    {
      "from": "27 May 2022",
      "to": "(current)",
      "value": "NSW 2000",
    },
    {
      "from": "04 Jan 2017",
      "to": "27 May 2022",
      "value": "NSW 2000",
    },
    {
      "from": "12 Sep 2014",
      "to": "04 Jan 2017",
      "value": "NSW 2000",
    },
    {
      "from": "30 Nov 2009",
      "to": "12 Sep 2014",
      "value": "NSW 2000",
    },
    {
      "from": "20 Mar 2009",
      "to": "30 Nov 2009",
      "value": "NSW 2000",
    },
    {
      "from": "16 Aug 2007",
      "to": "20 Mar 2009",
      "value": "NSW 2000",
    },
    {
      "from": "04 Oct 2006",
      "to": "16 Aug 2007",
      "value": "NSW 2150",
    },
    {
      "from": "31 Aug 2004",
      "to": "04 Oct 2006",
      "value": "NSW 2000",
    },
    {
      "from": "07 Feb 2000",
      "to": "31 Aug 2004",
      "value": "NSW 2000",
    },
  ],
  "businessName": [
    {
      "from": "09 Jun 2023",
      "to": "(current)",
      "value": "ACROSS THE NULLARBOR",
    },
    {
      "from": "08 Jan 2022",
      "to": "(current)",
      "value": "Unloan",
    },
    {
      "from": "25 May 2021",
      "to": "(current)",
      "value": "COMMINSURE",
    },
    {
      "from": "25 May 2021",
      "to": "(current)",
      "value": "COMMONWEALTH FINANCIAL SERVICES",
    },
    {
      "from": "22 Mar 2013",
      "to": "(current)",
      "value": "BANKWEST",
    },
    {
      "from": "16 May 2012",
      "to": "(current)",
      "value": "COMMONWEALTH AWARDS",
    },
    {
      "from": "17 Nov 2010",
      "to": "(current)",
      "value": "COMMONWEALTH BANK GROUP",
    },
    {
      "from": "03 Jun 2010",
      "to": "(current)",
      "value": "COMMONWEALTH FINANCIAL SERVICES",
    },
    {
      "from": "17 May 2010",
      "to": "(current)",
      "value": "COMMONWEALTH PRIVATE BANK",
    },
    {
      "from": "29 Mar 2010",
      "to": "(current)",
      "value": "CBA WOMEN IN FOCUS",
    },
    {
      "from": "01 Oct 2009",
      "to": "(current)",
      "value": "WOMEN IN FOCUS",
    },
    {
      "from": "26 Aug 2009",
      "to": "(current)",
      "value": "WOMEN IN FOCUS",
    },
    {
      "from": "01 Oct 2004",
      "to": "(current)",
      "value": "COMMONWEALTH PRIVATE BANK",
    },
    {
      "from": "15 Nov 2000",
      "to": "(current)",
      "value": "COMMONWEALTH BANK",
    },
    {
      "from": "04 Oct 2000",
      "to": "(current)",
      "value": "COMMBANK",
    },
    {
      "from": "20 Jun 2000",
      "to": "(current)",
      "value": "MY COMMBANK",
    },
    {
      "from": "13 Jan 2000",
      "to": "(current)",
      "value": "WHICH BANK",
    },
    {
      "from": "04 Jan 2000",
      "to": "(current)",
      "value": "DOLLARMITE",
    },
    {
      "from": "01 Nov 1999",
      "to": "(current)",
      "value": "AUSTRALASIAN ASSET RESIDUAL MANAGEMENT",
    },
    {
      "from": "01 Nov 1999",
      "to": "(current)",
      "value": "COLONIAL STATE BANK",
    },
    {
      "from": "30 Oct 2019",
      "to": "01 May 2021",
      "value": "COMMONWEALTH FINANCIAL SERVICES",
    },
    {
      "from": "08 Mar 2018",
      "to": "11 Feb 2020",
      "value": "Kessel Run Hair",
    },
    {
      "from": "29 Apr 2015",
      "to": "13 Mar 2016",
      "value": "Etna pizzeria cafe",
    },
    {
      "from": "26 Mar 2013",
      "to": "24 Mar 2016",
      "value": "BANKWEST",
    },
    {
      "from": "22 Mar 2013",
      "to": "24 Mar 2016",
      "value": "BANKWEST",
    },
    {
      "from": "22 Mar 2013",
      "to": "24 Mar 2016",
      "value": "BANKWEST",
    },
    {
      "from": "22 Mar 2013",
      "to": "24 Mar 2016",
      "value": "BANKWEST",
    },
    {
      "from": "22 Mar 2013",
      "to": "24 Mar 2016",
      "value": "BANKWEST",
    },
    {
      "from": "29 Jun 2011",
      "to": "17 Feb 2021",
      "value": "COMMONWEALTH PRIVATE BANK",
    },
    {
      "from": "07 Jun 2010",
      "to": "26 Jun 2018",
      "value": "COMMONWEALTH BANK",
    },
    {
      "from": "03 Jun 2010",
      "to": "26 Jun 2018",
      "value": "COMMONWEALTH BANK",
    },
    {
      "from": "02 Jun 2010",
      "to": "03 Feb 2021",
      "value": "COMMONWEALTH BANK",
    },
    {
      "from": "01 Jun 2010",
      "to": "26 Jun 2018",
      "value": "COMMONWEALTH BANK",
    },
    {
      "from": "12 Mar 2010",
      "to": "30 Jan 2016",
      "value": "CBA WOMEN IN FOCUS",
    },
    {
      "from": "25 Feb 2010",
      "to": "28 Feb 2010",
      "value": "SPRINGVALE CAFE & FLORIST",
    },
    {
      "from": "16 Sep 2009",
      "to": "16 Jun 2015",
      "value": "WOMEN IN FOCUS",
    },
    {
      "from": "15 Sep 2009",
      "to": "09 Jun 2016",
      "value": "WOMEN IN FOCUS",
    },
    {
      "from": "26 Aug 2009",
      "to": "09 Jun 2016",
      "value": "WOMEN IN FOCUS",
    },
    {
      "from": "26 Aug 2009",
      "to": "15 Jun 2015",
      "value": "WOMEN IN FOCUS",
    },
    {
      "from": "19 Jun 2009",
      "to": "05 Dec 2015",
      "value": "COLONIAL GEARED INVESTMENTS",
    },
    {
      "from": "12 Jun 2009",
      "to": "05 Dec 2015",
      "value": "COLONIAL STATE BANK",
    },
    {
      "from": "10 Jun 2009",
      "to": "05 Dec 2015",
      "value": "COLONIAL STATE BANK",
    },
    {
      "from": "25 May 2009",
      "to": "10 Aug 2012",
      "value": "COLONIAL GEARED INVESTMENTS",
    },
    {
      "from": "20 May 2009",
      "to": "20 May 2012",
      "value": "COLONIAL GEARED INVESTMENTS",
    },
    {
      "from": "19 May 2009",
      "to": "04 Jun 2016",
      "value": "COLONIAL GEARED INVESTMENTS",
    },
    {
      "from": "19 May 2009",
      "to": "31 Aug 2012",
      "value": "COLONIAL GEARED INVESTMENTS",
    },
    {
      "from": "19 May 2009",
      "to": "24 Aug 2012",
      "value": "COLONIAL GEARED INVESTMENTS",
    },
    {
      "from": "19 May 2009",
      "to": "25 May 2012",
      "value": "COLONIAL GEARED INVESTMENTS",
    },
    {
      "from": "18 May 2009",
      "to": "06 Dec 2015",
      "value": "COLONIAL GEARED INVESTMENTS",
    },
    {
      "from": "30 Apr 2009",
      "to": "21 Aug 2012",
      "value": "AUSTRALASIAN ASSET RESIDUAL MANAGEMENT",
    },
    {
      "from": "12 Mar 2009",
      "to": "09 Dec 2015",
      "value": "COMMINVEST",
    },
    {
      "from": "02 Jul 2007",
      "to": "13 Jan 2021",
      "value": "MORTGAGE INNOVATION CENTRE",
    },
    {
      "from": "15 Dec 2006",
      "to": "25 Jan 2010",
      "value": "CBA FINANCIAL SERVICES",
    },
    {
      "from": "16 Jun 2006",
      "to": "26 Jun 2006",
      "value": "ROYS CAKE SHOP",
    },
    {
      "from": "14 Dec 2005",
      "to": "28 Feb 2010",
      "value": "THE NECROPOLIS",
    },
    {
      "from": "14 Dec 2005",
      "to": "28 Feb 2010",
      "value": "THE NECROPOLIS SPRINGVALE",
    },
    {
      "from": "13 Dec 2005",
      "to": "28 Jan 2010",
      "value": "SPRINGVALE BOTANICAL GARDENS",
    },
    {
      "from": "07 Jan 2005",
      "to": "09 Apr 2008",
      "value": "COMMONWEALTH PRIVATE BANK",
    },
    {
      "from": "17 Nov 2004",
      "to": "24 Dec 2007",
      "value": "COMMONWEALTH PRIVATE BANK",
    },
    {
      "from": "16 Nov 2004",
      "to": "17 Nov 2010",
      "value": "COMMONWEALTH PRIVATE BANK",
    },
    {
      "from": "14 Oct 2004",
      "to": "16 Dec 2020",
      "value": "COMMONWEALTH PRIVATE BANK",
    },
    {
      "from": "13 Oct 2004",
      "to": "14 Dec 2010",
      "value": "COMMONWEALTH PRIVATE BANK",
    },
    {
      "from": "01 Oct 2004",
      "to": "08 Mar 2011",
      "value": "COMMONWEALTH PRIVATE BANK",
    },
    {
      "from": "01 Oct 2004",
      "to": "10 Apr 2010",
      "value": "COMMONWEALTH PRIVATE BANK",
    },
    {
      "from": "29 Jun 2004",
      "to": "06 Aug 2007",
      "value": "COLONIAL FINANCIAL PLANNING",
    },
    {
      "from": "15 May 2004",
      "to": "16 May 2007",
      "value": "COLONIAL FINANCIAL PLANNING",
    },
    {
      "from": "10 May 2004",
      "to": "10 Sep 2010",
      "value": "COLONIAL FINANCIAL PLANNING",
    },
    {
      "from": "07 May 2004",
      "to": "08 Jul 2010",
      "value": "COLONIAL FINANCIAL PLANNING",
    },
    {
      "from": "06 May 2004",
      "to": "25 Jun 2018",
      "value": "MORTGAGE INNOVATION CENTRE",
    },
    {
      "from": "04 May 2004",
      "to": "06 Aug 2010",
      "value": "COLONIAL FINANCIAL PLANNING",
    },
    {
      "from": "19 Apr 2004",
      "to": "24 May 2010",
      "value": "MORTGAGE INNOVATION CENTRE",
    },
    {
      "from": "02 Apr 2004",
      "to": "04 Jun 2007",
      "value": "MORTGAGE INNOVATION CENTRE",
    },
    {
      "from": "30 Mar 2004",
      "to": "14 Jun 2016",
      "value": "MORTGAGE INNOVATION CENTRE",
    },
    {
      "from": "29 Mar 2004",
      "to": "25 May 2016",
      "value": "QUEENSLAND MORTGAGE INNOVATION CENTRE",
    },
    {
      "from": "29 Mar 2004",
      "to": "01 Feb 2016",
      "value": "MORTGAGE INNOVATION CENTRE",
    },
    {
      "from": "29 Mar 2004",
      "to": "25 Jun 2010",
      "value": "MORTGAGE INNOVATION CENTRE",
    },
    {
      "from": "29 Mar 2004",
      "to": "24 Jun 2007",
      "value": "MORTGAGE INNOVATION CENTRE",
    },
    {
      "from": "22 Dec 2003",
      "to": "26 Jul 2007",
      "value": "COLONIAL FINANCIAL PLANNING",
    },
    {
      "from": "17 Mar 2003",
      "to": "28 Nov 2007",
      "value": "COLONIAL FINANCIAL PLANNING",
    },
    {
      "from": "30 Oct 2002",
      "to": "07 Jul 2009",
      "value": "COMMONWEALTH PRIVATE CLIENT SERVICES",
    },
    {
      "from": "05 Jun 2002",
      "to": "08 Sep 2008",
      "value": "COMMBUSINESS",
    },
    {
      "from": "27 May 2002",
      "to": "12 May 2005",
      "value": "COLONIALALIA",
    },
    {
      "from": "27 May 2002",
      "to": "12 May 2005",
      "value": "COMMCALIA",
    },
    {
      "from": "10 May 2002",
      "to": "19 May 2005",
      "value": "BE YOUR OWN BANK MANAGER",
    },
    {
      "from": "18 Apr 2002",
      "to": "02 Nov 2011",
      "value": "COMMONWEALTH AWARDS",
    },
    {
      "from": "01 Mar 2002",
      "to": "08 Jun 2011",
      "value": "DOLLARS AND CENTS",
    },
    {
      "from": "25 Feb 2002",
      "to": "27 May 2008",
      "value": "COMMFIRST",
    },
    {
      "from": "15 Feb 2002",
      "to": "31 Jan 2005",
      "value": "PREMIUM FINANCIAL SERVICES",
    },
    {
      "from": "22 Nov 2001",
      "to": "02 Dec 2004",
      "value": "COLONIAL ONLINE",
    },
    {
      "from": "19 Nov 2001",
      "to": "19 Nov 2010",
      "value": "COMMINVEST NETSUPER",
    },
    {
      "from": "25 Oct 2001",
      "to": "26 Oct 2004",
      "value": "TERM DEPOSIT EXPRESS",
    },
    {
      "from": "17 Oct 2001",
      "to": "22 Nov 2010",
      "value": "COMMINVEST NETSUPER",
    },
    {
      "from": "16 Oct 2001",
      "to": "04 Jun 2016",
      "value": "COMMINVEST NETSUPER",
    },
    {
      "from": "10 Oct 2001",
      "to": "10 Dec 2007",
      "value": "COMMINVEST NETSUPER",
    },
    {
      "from": "03 Oct 2001",
      "to": "08 Feb 2011",
      "value": "COMMINVEST NETSUPER",
    },
    {
      "from": "03 Oct 2001",
      "to": "01 Feb 2011",
      "value": "COMMINVEST NETSUPER",
    },
    {
      "from": "03 Oct 2001",
      "to": "22 Jan 2011",
      "value": "COMMINVEST NETSUPER",
    },
    {
      "from": "03 Oct 2001",
      "to": "12 Dec 2010",
      "value": "COMMINVEST NETSUPER",
    },
    {
      "from": "03 Oct 2001",
      "to": "16 Feb 2009",
      "value": "COMMINVEST NETSUPER",
    },
    {
      "from": "27 Sep 2001",
      "to": "14 Sep 2004",
      "value": "GOLDPRIVILEGE",
    },
    {
      "from": "24 Sep 2001",
      "to": "15 Oct 2004",
      "value": "CBAIB",
    },
    {
      "from": "05 Sep 2001",
      "to": "14 Dec 2007",
      "value": "COMMGATE",
    },
    {
      "from": "30 Aug 2001",
      "to": "07 Dec 2010",
      "value": "TESTDRIVENETBANK",
    },
    {
      "from": "24 Aug 2001",
      "to": "29 Nov 2007",
      "value": "COMMHEALTH",
    },
    {
      "from": "27 Jul 2001",
      "to": "09 Dec 2015",
      "value": "COLONIAL BANK",
    },
    {
      "from": "27 Jul 2001",
      "to": "09 Dec 2015",
      "value": "COLONIAL STATE BANK",
    },
    {
      "from": "12 Jul 2001",
      "to": "15 Oct 2010",
      "value": "COMMWEALTH DOLLARSANDSENSE",
    },
    {
      "from": "12 Jul 2001",
      "to": "13 Jul 2004",
      "value": "COMMWEALTH ADVISERS",
    },
    {
      "from": "18 Jun 2001",
      "to": "20 Sep 2007",
      "value": "COMMWEALTH EXECUTIVEONLINE",
    },
    {
      "from": "18 Jun 2001",
      "to": "20 Sep 2007",
      "value": "COMMWEALTH PREMIUMONLINE",
    },
    {
      "from": "08 Jun 2001",
      "to": "13 Sep 2007",
      "value": "ADVISORYONLINE",
    },
    {
      "from": "08 Jun 2001",
      "to": "13 Sep 2007",
      "value": "PRIVATEONLINE",
    },
    {
      "from": "04 Jun 2001",
      "to": "26 Oct 2004",
      "value": "COLONIAL ONLINE",
    },
    {
      "from": "01 Jun 2001",
      "to": "01 Jun 2010",
      "value": "MY COMMBANK",
    },
    {
      "from": "28 May 2001",
      "to": "17 Dec 2007",
      "value": "COMSEC ADVISORY",
    },
    {
      "from": "28 May 2001",
      "to": "30 Aug 2007",
      "value": "CBAGPP",
    },
    {
      "from": "27 May 2001",
      "to": "16 Aug 2004",
      "value": "COLONIAL ONLINE",
    },
    {
      "from": "24 May 2001",
      "to": "24 Jul 2007",
      "value": "COMSEC ADVISORY",
    },
    {
      "from": "24 May 2001",
      "to": "07 May 2004",
      "value": "COMMWEALTH",
    },
    {
      "from": "02 May 2001",
      "to": "06 Aug 2010",
      "value": "MY ONLINE SUMMARY",
    },
    {
      "from": "02 May 2001",
      "to": "27 Apr 2004",
      "value": "MYCOMMWEALTH",
    },
    {
      "from": "20 Apr 2001",
      "to": "20 Apr 2004",
      "value": "COMMWEALTH",
    },
    {
      "from": "09 Apr 2001",
      "to": "30 May 2001",
      "value": "COMMSEC ADVISORY",
    },
    {
      "from": "06 Apr 2001",
      "to": "14 Jul 2010",
      "value": "MY MONEY SUMMARY",
    },
    {
      "from": "22 Mar 2001",
      "to": "16 Mar 2004",
      "value": "COMMWEALTH GLOBAL",
    },
    {
      "from": "20 Mar 2001",
      "to": "26 Apr 2010",
      "value": "COMMONWEALTH RESEARCH",
    },
    {
      "from": "20 Mar 2001",
      "to": "15 Mar 2004",
      "value": "COMMCAPITAL",
    },
    {
      "from": "06 Mar 2001",
      "to": "09 Jun 2010",
      "value": "CASH MAIL",
    },
    {
      "from": "06 Mar 2001",
      "to": "07 Mar 2004",
      "value": "COMMWEALTH CASH",
    },
    {
      "from": "01 Mar 2001",
      "to": "19 May 2016",
      "value": "COMMWEALTH GROUP",
    },
    {
      "from": "01 Mar 2001",
      "to": "20 Jul 2010",
      "value": "COMMWEALTH",
    },
    {
      "from": "01 Mar 2001",
      "to": "13 Jul 2009",
      "value": "COMMWEALTH",
    },
    {
      "from": "01 Mar 2001",
      "to": "21 Mar 2004",
      "value": "COMMWEALTH GROUP",
    },
    {
      "from": "01 Mar 2001",
      "to": "15 Mar 2004",
      "value": "COMMWEALTH",
    },
    {
      "from": "28 Feb 2001",
      "to": "28 Feb 2010",
      "value": "COMMONWEALTH RESEARCH",
    },
    {
      "from": "26 Feb 2001",
      "to": "26 Apr 2007",
      "value": "COMMONWEALTH RESEARCH",
    },
    {
      "from": "15 Feb 2001",
      "to": "01 Mar 2004",
      "value": "COMMDIRECT",
    },
    {
      "from": "13 Feb 2001",
      "to": "01 Mar 2004",
      "value": "COMMWEALTH GROUP",
    },
    {
      "from": "31 Jan 2001",
      "to": "11 Jul 2010",
      "value": "COMMONWEALTH RESEARCH",
    },
    {
      "from": "31 Jan 2001",
      "to": "01 Jul 2010",
      "value": "COMMONWEALTH RESEARCH",
    },
    {
      "from": "31 Jan 2001",
      "to": "25 Jun 2010",
      "value": "COMMONWEALTH RESEARCH",
    },
    {
      "from": "31 Jan 2001",
      "to": "23 Jun 2010",
      "value": "COMMONWEALTH RESEARCH",
    },
    {
      "from": "31 Jan 2001",
      "to": "28 Sep 2009",
      "value": "COMMONWEALTH RESEARCH",
    },
    {
      "from": "31 Jan 2001",
      "to": "01 Feb 2004",
      "value": "COMMWEALTH PROPERTY",
    },
    {
      "from": "31 Jan 2001",
      "to": "19 Aug 2002",
      "value": "COMMONWEALTH RESEARCH",
    },
    {
      "from": "23 Jan 2001",
      "to": "27 Apr 2010",
      "value": "COMMADVISER",
    },
    {
      "from": "23 Jan 2001",
      "to": "27 Apr 2010",
      "value": "COMMPLANNER",
    },
    {
      "from": "23 Jan 2001",
      "to": "24 Jan 2004",
      "value": "COMMWEALTHPLANNING",
    },
    {
      "from": "23 Nov 2000",
      "to": "25 Jan 2010",
      "value": "MOBILEBANK",
    },
    {
      "from": "03 Nov 2000",
      "to": "04 Nov 2003",
      "value": "PAYSELECT",
    },
    {
      "from": "01 Nov 2000",
      "to": "13 Dec 2015",
      "value": "COMMBANK",
    },
    {
      "from": "01 Nov 2000",
      "to": "13 Dec 2015",
      "value": "COMMONWEALTH BANK",
    },
    {
      "from": "01 Nov 2000",
      "to": "13 Dec 2015",
      "value": "COMMONWEALTH BANK GROUP",
    },
    {
      "from": "24 Oct 2000",
      "to": "25 Oct 2006",
      "value": "COMMONWEALTH BANK",
    },
    {
      "from": "17 Oct 2000",
      "to": "14 Dec 2015",
      "value": "COMMBANK",
    },
    {
      "from": "17 Oct 2000",
      "to": "14 Dec 2015",
      "value": "COMMONWEALTH BANK",
    },
    {
      "from": "17 Oct 2000",
      "to": "13 Dec 2015",
      "value": "COMMONWEALTH BANK GROUP",
    },
    {
      "from": "17 Oct 2000",
      "to": "13 Dec 2015",
      "value": "COMMONWEALTH BANK GROUP",
    },
    {
      "from": "06 Oct 2000",
      "to": "07 Oct 2006",
      "value": "COMMBANK",
    },
    {
      "from": "03 Oct 2000",
      "to": "24 Mar 2021",
      "value": "COMMONWEALTH BANK",
    },
    {
      "from": "01 Oct 2000",
      "to": "28 Jan 2010",
      "value": "MOBILEBANK",
    },
    {
      "from": "14 Sep 2000",
      "to": "13 Dec 2015",
      "value": "COMMONWEALTH BANK GROUP",
    },
    {
      "from": "14 Sep 2000",
      "to": "03 Feb 2012",
      "value": "COMMBANK",
    },
    {
      "from": "14 Sep 2000",
      "to": "03 Feb 2012",
      "value": "COMMONWEALTH BANK GROUP",
    },
    {
      "from": "14 Sep 2000",
      "to": "01 Mar 2010",
      "value": "COMMONWEALTH BANK",
    },
    {
      "from": "14 Sep 2000",
      "to": "28 Feb 2010",
      "value": "COMMBANK",
    },
    {
      "from": "14 Sep 2000",
      "to": "16 Feb 2010",
      "value": "COMMONWEALTH BANK GROUP",
    },
    {
      "from": "14 Sep 2000",
      "to": "17 Jan 2010",
      "value": "COMMONWEALTH BANK",
    },
    {
      "from": "14 Sep 2000",
      "to": "12 Jan 2010",
      "value": "COMMBANK",
    },
    {
      "from": "14 Sep 2000",
      "to": "12 Jan 2010",
      "value": "COMMONWEALTH BANK GROUP",
    },
    {
      "from": "14 Sep 2000",
      "to": "13 Dec 2009",
      "value": "COMMBANK",
    },
    {
      "from": "14 Sep 2000",
      "to": "29 Mar 2007",
      "value": "COMMONWEALTH BANK",
    },
    {
      "from": "14 Sep 2000",
      "to": "29 Mar 2007",
      "value": "COMMONWEALTH BANK GROUP",
    },
    {
      "from": "30 Aug 2000",
      "to": "31 Aug 2003",
      "value": "TRADEZONE",
    },
    {
      "from": "21 Aug 2000",
      "to": "20 Aug 2003",
      "value": "ECX",
    },
    {
      "from": "21 Aug 2000",
      "to": "20 Aug 2003",
      "value": "NZONE",
    },
    {
      "from": "18 Aug 2000",
      "to": "18 Aug 2003",
      "value": "ECOMMXCHANGE",
    },
    {
      "from": "26 Jul 2000",
      "to": "31 Jul 2003",
      "value": "EZY AWARDS",
    },
    {
      "from": "07 Jul 2000",
      "to": "10 Jul 2003",
      "value": "COMMGROUP",
    },
    {
      "from": "06 Jul 2000",
      "to": "06 Jul 2003",
      "value": "CBA COMM SUPPLY",
    },
    {
      "from": "16 Jun 2000",
      "to": "27 May 2003",
      "value": "MAKING E HAPPEN",
    },
    {
      "from": "09 Jun 2000",
      "to": "14 Sep 2006",
      "value": "COMMBUY",
    },
    {
      "from": "09 Jun 2000",
      "to": "14 Sep 2006",
      "value": "COMMSELL",
    },
    {
      "from": "01 Jun 2000",
      "to": "10 Sep 2009",
      "value": "CBA MAKING IT HAPPEN",
    },
    {
      "from": "01 Jun 2000",
      "to": "10 Sep 2009",
      "value": "COMMPAY",
    },
    {
      "from": "01 Jun 2000",
      "to": "10 Sep 2009",
      "value": "QUICKLINE",
    },
    {
      "from": "22 May 2000",
      "to": "16 Mar 2012",
      "value": "AUSTRALIAN NETBANK.COM.AU",
    },
    {
      "from": "03 Apr 2000",
      "to": "06 Jul 2006",
      "value": "MAKING MONEY HAPPEN",
    },
    {
      "from": "17 Mar 2000",
      "to": "22 Mar 2003",
      "value": "BANK PATH",
    },
    {
      "from": "17 Mar 2000",
      "to": "22 Mar 2003",
      "value": "CAR PATH",
    },
    {
      "from": "17 Mar 2000",
      "to": "21 Mar 2003",
      "value": "INVESTOR PATH",
    },
    {
      "from": "17 Mar 2000",
      "to": "21 Mar 2003",
      "value": "LOAN PATH",
    },
    {
      "from": "17 Mar 2000",
      "to": "21 Mar 2003",
      "value": "WEALTH PATH",
    },
    {
      "from": "06 Mar 2000",
      "to": "07 Mar 2009",
      "value": "CUSTOMER DIRECT",
    },
    {
      "from": "06 Mar 2000",
      "to": "08 Mar 2003",
      "value": "INVESTMENT PLACE",
    },
    {
      "from": "07 Feb 2000",
      "to": "07 Feb 2009",
      "value": "CLUB AUSTRALIA",
    },
    {
      "from": "03 Feb 2000",
      "to": "06 Feb 2003",
      "value": "VAULT",
    },
    {
      "from": "31 Jan 2000",
      "to": "08 Apr 2009",
      "value": "COMMLOAN",
    },
    {
      "from": "31 Jan 2000",
      "to": "08 Apr 2009",
      "value": "ECOMMLOAN",
    },
    {
      "from": "31 Jan 2000",
      "to": "08 Apr 2009",
      "value": "E-PROCESS",
    },
    {
      "from": "31 Jan 2000",
      "to": "08 Apr 2009",
      "value": "LOANPROCESS",
    },
    {
      "from": "31 Jan 2000",
      "to": "08 Apr 2009",
      "value": "LOANSERV",
    },
    {
      "from": "18 Jan 2000",
      "to": "16 Mar 2009",
      "value": "VIP BANKING",
    },
    {
      "from": "17 Jan 2000",
      "to": "21 Apr 2009",
      "value": "BACK OFFICE PROCESSING",
    },
    {
      "from": "11 Jan 2000",
      "to": "12 Dec 2002",
      "value": "VAULT",
    },
    {
      "from": "06 Jan 2000",
      "to": "16 Mar 2009",
      "value": "EXECUTIVE BANKING",
    },
    {
      "from": "06 Jan 2000",
      "to": "16 Mar 2009",
      "value": "PRIVATE BANKING",
    },
    {
      "from": "22 Dec 1999",
      "to": "10 Feb 2003",
      "value": "ECOMMNETBANK",
    },
    {
      "from": "22 Dec 1999",
      "to": "10 Feb 2000",
      "value": "ECCMMNETBANK",
    },
    {
      "from": "10 Dec 1999",
      "to": "16 Mar 2009",
      "value": "ECOMMCORPORATE",
    },
    {
      "from": "03 Dec 1999",
      "to": "04 Feb 2009",
      "value": "COLONIAL BANK",
    },
    {
      "from": "03 Dec 1999",
      "to": "04 Feb 2009",
      "value": "COLONIAL ONE",
    },
    {
      "from": "12 Nov 1999",
      "to": "31 Oct 2002",
      "value": "ECOMMSUPPLY",
    },
    {
      "from": "01 Nov 1999",
      "to": "11 Mar 2021",
      "value": "AUSTRALIAN BANK",
    },
    {
      "from": "01 Nov 1999",
      "to": "13 Dec 2015",
      "value": "MOBILEBANK",
    },
    {
      "from": "01 Nov 1999",
      "to": "11 Dec 2015",
      "value": "MOBILEBANK",
    },
    {
      "from": "01 Nov 1999",
      "to": "28 Nov 2011",
      "value": "COLONIAL ONE",
    },
    {
      "from": "01 Nov 1999",
      "to": "25 Jan 2011",
      "value": "AUSTRALASIAN ASSET RESIDUAL MANAGEMENT",
    },
    {
      "from": "01 Nov 1999",
      "to": "01 Dec 2010",
      "value": "AUSTRALASIAN ASSET RESIDUAL MANAGEMENT",
    },
    {
      "from": "01 Nov 1999",
      "to": "10 Nov 2008",
      "value": "COLONIAL STATE BANK",
    },
    {
      "from": "01 Nov 1999",
      "to": "09 Oct 2008",
      "value": "COLONIAL BANK",
    },
    {
      "from": "01 Nov 1999",
      "to": "08 Oct 2007",
      "value": "AUSTRALASIAN ASSET RESIDUAL MANAGEMENT",
    },
    {
      "from": "01 Nov 1999",
      "to": "05 Apr 2007",
      "value": "COMMONWEALTH FINANCIAL PLANNING",
    },
    {
      "from": "01 Nov 1999",
      "to": "12 Dec 2006",
      "value": "COLONIAL STATE BANK",
    },
    {
      "from": "01 Nov 1999",
      "to": "07 Jul 2005",
      "value": "COMMONWEALTH INVESTMENT MANAGEMENT",
    },
    {
      "from": "01 Nov 1999",
      "to": "08 Jan 2002",
      "value": "AUSTRALASIAN ASSET RESIDUAL MANAGEMENT",
    },
    {
      "from": "01 Nov 1999",
      "to": "17 Dec 1999",
      "value": "COMMONWEALTH EQUIPMENT FINANCE",
    },
    {
      "from": "01 Nov 1999",
      "to": "28 Mar 2010",
      "value": "MOBILEBANK",
    },
    {
      "from": "01 Nov 1999",
      "to": "26 Nov 2008",
      "value": "BANK BILLS DIRECT",
    },
    {
      "from": "01 Nov 1999",
      "to": "16 Mar 2009",
      "value": "INSTITUTIONAL BANKING",
    },
    {
      "from": "01 Nov 1999",
      "to": "16 Mar 2009",
      "value": "PREMIUM BANKING",
    },
    {
      "from": "01 Nov 1999",
      "to": "23 Mar 2004",
      "value": "COMMSHOP",
    },
    {
      "from": "01 Nov 1999",
      "to": "22 Jan 2001",
      "value": "HOMEKEY",
    },
    {
      "from": "01 Nov 1999",
      "to": "02 Apr 2001",
      "value": "HOMEKEY",
    },
    {
      "from": "01 Nov 1999",
      "to": "22 Mar 2001",
      "value": "HOMEKEY",
    },
    {
      "from": "01 Nov 1999",
      "to": "28 May 2001",
      "value": "HOMEKEY",
    },
    {
      "from": "01 Nov 1999",
      "to": "09 Aug 2001",
      "value": "HOMEKEY",
    },
    {
      "from": "01 Nov 1999",
      "to": "05 Mar 2001",
      "value": "HOMEKEY",
    },
    {
      "from": "01 Nov 1999",
      "to": "12 Dec 2000",
      "value": "HOMEKEY",
    },
    {
      "from": "01 Nov 1999",
      "to": "22 Aug 2005",
      "value": "COMMONWEALTH FACTORS",
    },
    {
      "from": "01 Nov 1999",
      "to": "30 Sep 2003",
      "value": "COMMONWEALTH FACTORS",
    },
    {
      "from": "01 Nov 1999",
      "to": "19 Aug 2005",
      "value": "COMMONWEALTH FACTORS",
    },
    {
      "from": "01 Nov 1999",
      "to": "08 Aug 2005",
      "value": "COMMONWEALTH FACTORS",
    },
    {
      "from": "01 Nov 1999",
      "to": "22 Aug 2005",
      "value": "COMMONWEALTH FACTORS",
    },
    {
      "from": "01 Nov 1999",
      "to": "08 Aug 2005",
      "value": "COMMONWEALTH FACTORS",
    },
    {
      "from": "01 Nov 1999",
      "to": "19 Aug 2005",
      "value": "COMMONWEALTH FACTORS",
    },
    {
      "from": "01 Nov 1999",
      "to": "18 Aug 2005",
      "value": "COMMONWEALTH FACTORS",
    },
    {
      "from": "01 Nov 1999",
      "to": "14 Oct 2008",
      "value": "COLONIAL STATE BANK",
    },
    {
      "from": "01 Nov 1999",
      "to": "18 Oct 2011",
      "value": "AUSTRALIAN BANK",
    },
    {
      "from": "01 Nov 1999",
      "to": "17 Mar 2009",
      "value": "CUSTOMER DIRECT",
    },
    {
      "from": "01 Nov 1999",
      "to": "28 Jul 2008",
      "value": "CUSTOMER DIRECT",
    },
    {
      "from": "01 Nov 1999",
      "to": "17 Sep 2008",
      "value": "CUSTOMER DIRECT",
    },
    {
      "from": "01 Nov 1999",
      "to": "05 Oct 2009",
      "value": "CUSTOMER DIRECT",
    },
    {
      "from": "01 Nov 1999",
      "to": "06 Aug 2008",
      "value": "CUSTOMER DIRECT",
    },
    {
      "from": "01 Nov 1999",
      "to": "04 Aug 2008",
      "value": "CUSTOMER DIRECT",
    },
    {
      "from": "01 Nov 1999",
      "to": "28 Jul 2009",
      "value": "CUSTOMER DIRECT",
    },
    {
      "from": "01 Nov 1999",
      "to": "23 Jun 2008",
      "value": "AUSTRALIAN BANK",
    },
    {
      "from": "01 Nov 1999",
      "to": "17 Mar 2009",
      "value": "AUSTRALIAN BANK",
    },
    {
      "from": "01 Nov 1999",
      "to": "25 Jun 2008",
      "value": "AUSTRALIAN BANK",
    },
    {
      "from": "01 Nov 1999",
      "to": "09 Apr 2002",
      "value": "PRESTIGE BANKING",
    },
    {
      "from": "01 Nov 1999",
      "to": "18 May 2009",
      "value": "AUSTRALIAN BANK",
    },
    {
      "from": "01 Nov 1999",
      "to": "17 Mar 2008",
      "value": "AUSTRALIAN BANK A DIVISION OF COMMONWEALTH BANK",
    },
    {
      "from": "01 Nov 1999",
      "to": "19 Jul 2010",
      "value": "MOBILEBANK",
    },
    {
      "from": "01 Nov 1999",
      "to": "03 May 2010",
      "value": "MOBILEBANK",
    },
    {
      "from": "01 Nov 1999",
      "to": "07 Jul 2010",
      "value": "MOBILEBANK",
    },
    {
      "from": "",
      "to": "",
      "value": "From 1 November 2025, ABN Lookup will not display trading names and will only display registered business names. For more information, click help.",
    },
  ],
  "entityName": [
    {
      "from": "01 Nov 1999",
      "to": "(current)",
      "value": "COMMONWEALTH BANK OF AUSTRALIA",
    },
  ],
  "entityType": [
    {
      "from": "",
      "to": "",
      "value": "Australian Public Company",
    },
  ],
  "gstStatus": [
    {
      "from": "01 Jul 2000",
      "to": "(current)",
      "value": "Registered",
    },
  ],
  "tradingName": [
    {
      "from": "13 Sep 2000",
      "to": "(current)",
      "value": "COMMONWEALTH BANK OF AUSTRALIA",
    },
    {
      "from": "20 Jul 2000",
      "to": "(current)",
      "value": "COMMOMWEALTH BANK OF AUSTRALIA",
    },
    {
      "from": "",
      "to": "",
      "value": "123 123 124 View record on the ASIC website",
    },
    {
      "from": "",
      "to": "",
      "value": "Not entitled to receive tax deductible gifts",
    },
  ],
}
`;

exports[`History tests should get histories data match with snapshots - 75 846 826 742 1`] = `
{
  "abnStatus": [
    {
      "from": "24 May 2000",
      "to": "(current)",
      "value": "Active",
    },
  ],
  "businessLocation": [
    {
      "from": "24 May 2000",
      "to": "(current)",
      "value": "SA 5093",
    },
    {
      "from": "",
      "to": "",
      "value": "From 1 November 2025, ABN Lookup will not display trading names and will only display registered business names. For more information, click help.",
    },
  ],
  "entityName": [
    {
      "from": "24 May 2000",
      "to": "(current)",
      "value": "COLES, ADRIAN STAN",
    },
    {
      "from": "24 May 2000",
      "to": "24 May 2000",
      "value": "COLES, ADRIAN S",
    },
  ],
  "entityType": [
    {
      "from": "",
      "to": "",
      "value": "Individual/Sole Trader",
    },
  ],
  "gstStatus": [
    {
      "from": "",
      "to": "",
      "value": "No current or historical GST registrations",
    },
  ],
  "tradingName": [
    {
      "from": "24 May 2000",
      "to": "(current)",
      "value": "ADRIAN COLES",
    },
  ],
}
`;

exports[`Lookup tests 45 004 189 708 should match with snapshot 1`] = `
{
  "businessNames": [
    {
      "businessName": "COLES LOCAL",
      "from": "15 Dec 2017",
    },
    {
      "businessName": "MIX APPAREL",
      "from": "27 Apr 2012",
    },
    {
      "businessName": "COLES CENTRAL",
      "from": "16 Feb 2004",
    },
    {
      "businessName": "COLES ONLINE",
      "from": "14 Feb 2000",
    },
    {
      "businessName": "COLES SUPERMARKETS",
      "from": "14 Feb 2000",
    },
    {
      "businessName": "PICK 'N' PAY",
      "from": "14 Feb 2000",
    },
  ],
  "details": {
    "abnStatus": {
      "from": "14 Feb 2000",
      "status": "Active",
      "statusText": "Active from 14 Feb 2000",
    },
    "businessLocation": {
      "postcode": 3123,
      "state": "VIC",
    },
    "entityName": "COLES SUPERMARKETS AUSTRALIA PTY LTD",
    "entityType": "Australian Private Company",
    "gstStatus": {
      "from": "01 Jul 2000",
      "status": "Registered",
      "statusText": "Registered from 01 Jul 2000",
    },
  },
  "tradingNames": [
    {
      "from": "14 Feb 2000",
      "tradingName": "COLES SUPERMARKETS",
    },
    {
      "from": "14 Feb 2000",
      "tradingName": "COLES EXPRESS",
    },
    {
      "from": "14 Feb 2000",
      "tradingName": "COLES ONLINE",
    },
  ],
}
`;

exports[`Lookup tests should retrieve ABN information for ACN: 006912563 , name: a , gst: registered 1`] = `
{
  "businessNames": [
    {
      "businessName": "TUBEPAK",
      "from": "13 Oct 2011",
    },
  ],
  "details": {
    "abnStatus": {
      "from": "03 Feb 2000",
      "status": "Active",
      "statusText": "Active from 03 Feb 2000",
    },
    "businessLocation": {
      "postcode": 3105,
      "state": "VIC",
    },
    "entityName": "SONOCO AUSTRALIA PTY. LTD.",
    "entityType": "Australian Private Company",
    "gstStatus": {
      "from": "01 Jul 2000",
      "status": "Registered",
      "statusText": "Registered from 01 Jul 2000",
    },
  },
  "tradingNames": [],
}
`;

exports[`Lookup tests should retrieve ABN information for ACN: 15 035 513 435 , name: BAROSSA GRAPE AND WINE ASSOCIATION INCORPORATED , gst: Registered 1`] = `
{
  "businessNames": [
    {
      "businessName": "Barossa Australia",
      "from": "29 Oct 2019",
    },
    {
      "businessName": "Barossa Wine School",
      "from": "20 Oct 2018",
    },
    {
      "businessName": "BGWA",
      "from": "08 Aug 2018",
    },
  ],
  "details": {
    "abnStatus": {
      "from": "06 Jul 2006",
      "status": "Active",
      "statusText": "Active from 06 Jul 2006",
    },
    "businessLocation": {
      "postcode": 5352,
      "state": "SA",
    },
    "entityName": "BAROSSA AUSTRALIA INCORPORATED",
    "entityType": "Other Incorporated Entity",
    "gstStatus": {
      "from": "01 Oct 2007",
      "status": "Registered",
      "statusText": "Registered from 01 Oct 2007",
    },
  },
  "tradingNames": [
    {
      "from": "19 Sep 2008",
      "tradingName": "BAROSSA GRAPE AND WINE ASSOCIATION",
    },
  ],
}
`;

exports[`Lookup tests should retrieve ABN information for ACN: 35 460 201 920 , name: K.L CHOW & K.F HWANG & H WONG , gst: not registered 1`] = `
{
  "businessNames": [],
  "details": {
    "abnStatus": {
      "from": "23 Jun 2017",
      "status": "Cancelled",
      "statusText": "Cancelled from 23 Jun 2017",
    },
    "businessLocation": {
      "postcode": 6017,
      "state": "WA",
    },
    "entityName": "K.L CHOW & K.F HWANG & H WONG",
    "entityType": "Other Partnership",
    "gstStatus": {
      "from": undefined,
      "status": "unregistered",
      "statusText": "Not currently registered for GST",
    },
  },
  "tradingNames": [
    {
      "from": "18 Aug 2011",
      "tradingName": "faith kolly Hwang.Hong peng kevin Wong. kok leong Chow",
    },
    {
      "from": "18 Aug 2011",
      "tradingName": "CK2 cleaning services",
    },
  ],
}
`;

exports[`Lookup tests should retrieve ABN information for ACN: 48 123 123 124 , name: COMMONWEALTH BANK , gst: registered 1`] = `
{
  "businessNames": [
    {
      "businessName": "ACROSS THE NULLARBOR",
      "from": "09 Jun 2023",
    },
    {
      "businessName": "Unloan",
      "from": "08 Jan 2022",
    },
    {
      "businessName": "COMMINSURE",
      "from": "25 May 2021",
    },
    {
      "businessName": "COMMONWEALTH FINANCIAL SERVICES",
      "from": "25 May 2021",
    },
    {
      "businessName": "BANKWEST",
      "from": "22 Mar 2013",
    },
    {
      "businessName": "COMMONWEALTH AWARDS",
      "from": "16 May 2012",
    },
    {
      "businessName": "COMMONWEALTH BANK GROUP",
      "from": "17 Nov 2010",
    },
    {
      "businessName": "COMMONWEALTH FINANCIAL SERVICES",
      "from": "03 Jun 2010",
    },
    {
      "businessName": "COMMONWEALTH PRIVATE BANK",
      "from": "17 May 2010",
    },
    {
      "businessName": "CBA WOMEN IN FOCUS",
      "from": "29 Mar 2010",
    },
    {
      "businessName": "WOMEN IN FOCUS",
      "from": "01 Oct 2009",
    },
    {
      "businessName": "WOMEN IN FOCUS",
      "from": "26 Aug 2009",
    },
    {
      "businessName": "COMMONWEALTH PRIVATE BANK",
      "from": "01 Oct 2004",
    },
    {
      "businessName": "COMMONWEALTH BANK",
      "from": "15 Nov 2000",
    },
    {
      "businessName": "COMMBANK",
      "from": "04 Oct 2000",
    },
    {
      "businessName": "MY COMMBANK",
      "from": "20 Jun 2000",
    },
    {
      "businessName": "WHICH BANK",
      "from": "13 Jan 2000",
    },
    {
      "businessName": "DOLLARMITE",
      "from": "04 Jan 2000",
    },
    {
      "businessName": "AUSTRALASIAN ASSET RESIDUAL MANAGEMENT",
      "from": "01 Nov 1999",
    },
    {
      "businessName": "COLONIAL STATE BANK",
      "from": "01 Nov 1999",
    },
  ],
  "details": {
    "Replaces:": "61 814 236 264",
    "abnStatus": {
      "from": "01 Nov 1999",
      "status": "Active",
      "statusText": "Active from 01 Nov 1999",
    },
    "businessLocation": {
      "postcode": 2000,
      "state": "NSW",
    },
    "entityName": "COMMONWEALTH BANK OF AUSTRALIA",
    "entityType": "Australian Public Company",
    "gstStatus": {
      "from": "01 Jul 2000",
      "status": "Registered",
      "statusText": "Registered from 01 Jul 2000",
    },
  },
  "tradingNames": [
    {
      "from": "13 Sep 2000",
      "tradingName": "COMMONWEALTH BANK OF AUSTRALIA",
    },
    {
      "from": "20 Jul 2000",
      "tradingName": "COMMOMWEALTH BANK OF AUSTRALIA",
    },
  ],
}
`;

exports[`Lookup tests should retrieve ABN information for ACN: 75 846 826 742 , name: COLES, ADRIAN STAN , gst: Not currently registered for GST 1`] = `
{
  "businessNames": [],
  "details": {
    "abnStatus": {
      "from": "24 May 2000",
      "status": "Active",
      "statusText": "Active from 24 May 2000",
    },
    "businessLocation": {
      "postcode": 5093,
      "state": "SA",
    },
    "entityName": "COLES, ADRIAN STAN",
    "entityType": "Individual/Sole Trader",
    "gstStatus": {
      "from": undefined,
      "status": "unregistered",
      "statusText": "Not currently registered for GST",
    },
  },
  "tradingNames": [
    {
      "from": "24 May 2000",
      "tradingName": "ADRIAN COLES",
    },
  ],
}
`;

exports[`searchActive() should get the list company match with snapshot of 'Racing' 1`] = `
[
  {
    "abn": "54 831 087 041",
    "businessLocation": {
      "postcode": 7310,
      "state": "TAS",
    },
    "name": "LIMITED RACING",
    "type": "Business Name",
  },
  {
    "abn": "29 646 766 752",
    "businessLocation": {
      "postcode": 4225,
      "state": "QLD",
    },
    "name": "MR RACING PTY LTD",
    "type": "Entity Name",
  },
  {
    "abn": "49 104 883 267",
    "businessLocation": {
      "postcode": 3008,
      "state": "VIC",
    },
    "name": "RACING.COM PTY LTD",
    "type": "Entity Name",
  },
  {
    "abn": "32 080 959 495",
    "businessLocation": {
      "postcode": 2000,
      "state": "NSW",
    },
    "name": "RACINGCORP PTY LIMITED",
    "type": "Entity Name",
  },
  {
    "abn": "55 643 473 376",
    "businessLocation": {
      "postcode": 3008,
      "state": "VIC",
    },
    "name": "Racing.com",
    "type": "Business Name",
  },
  {
    "abn": "54 625 373 042",
    "businessLocation": {
      "postcode": 4118,
      "state": "QLD",
    },
    "name": "TA2 RACING PTY LTD",
    "type": "Entity Name",
  },
  {
    "abn": "67 451 370 261",
    "businessLocation": {
      "postcode": 2170,
      "state": "NSW",
    },
    "name": "aka racing",
    "type": "Business Name",
  },
  {
    "abn": "77 126 337 479",
    "businessLocation": {
      "postcode": 2323,
      "state": "NSW",
    },
    "name": "168 Racing",
    "type": "Business Name",
  },
  {
    "abn": "64 356 141 889",
    "businessLocation": {
      "postcode": 3931,
      "state": "VIC",
    },
    "name": "181 Racing",
    "type": "Trading Name",
  },
  {
    "abn": "82 411 754 600",
    "businessLocation": {
      "postcode": 6108,
      "state": "WA",
    },
    "name": "1935 RACING",
    "type": "Business Name",
  },
  {
    "abn": "52 612 852 927",
    "businessLocation": {
      "postcode": 2261,
      "state": "NSW",
    },
    "name": "427 RACING",
    "type": "Business Name",
  },
  {
    "abn": "83 450 969 663",
    "businessLocation": {
      "postcode": 5096,
      "state": "SA",
    },
    "name": "63 Racing",
    "type": "Business Name",
  },
  {
    "abn": "52 324 465 182",
    "businessLocation": {
      "postcode": 7019,
      "state": "TAS",
    },
    "name": "757 Racing",
    "type": "Trading Name",
  },
  {
    "abn": "51 775 419 658",
    "businessLocation": {
      "postcode": 2758,
      "state": "NSW",
    },
    "name": "777 RACING",
    "type": "Business Name",
  },
  {
    "abn": "80 187 935 196",
    "businessLocation": {
      "postcode": 2570,
      "state": "NSW",
    },
    "name": "78 RACING",
    "type": "Business Name",
  },
  {
    "abn": "95 722 823 980",
    "businessLocation": {
      "postcode": 3006,
      "state": "VIC",
    },
    "name": "838 RACING",
    "type": "Business Name",
  },
  {
    "abn": "16 081 865 312",
    "businessLocation": {
      "postcode": 3121,
      "state": "VIC",
    },
    "name": "88 racing",
    "type": "Business Name",
  },
  {
    "abn": "21 164 489 454",
    "businessLocation": {
      "postcode": 3931,
      "state": "VIC",
    },
    "name": "888 RACING PTY LTD",
    "type": "Entity Name",
  },
  {
    "abn": "49 839 287 836",
    "businessLocation": {
      "postcode": 2015,
      "state": "NSW",
    },
    "name": "991 RACING",
    "type": "Business Name",
  },
  {
    "abn": "73 611 762 308",
    "businessLocation": {
      "postcode": 2015,
      "state": "NSW",
    },
    "name": "991 RACING PTY LTD",
    "type": "Entity Name",
  },
  {
    "abn": "16 632 382 622",
    "businessLocation": {
      "postcode": 5160,
      "state": "SA",
    },
    "name": "AA RACING",
    "type": "Business Name",
  },
  {
    "abn": "88 006 180 801",
    "businessLocation": {
      "postcode": 2010,
      "state": "NSW",
    },
    "name": "AAP RACING",
    "type": "Business Name",
  },
  {
    "abn": "86 969 895 367",
    "businessLocation": {
      "postcode": 4226,
      "state": "QLD",
    },
    "name": "AB RACING",
    "type": "Business Name",
  },
  {
    "abn": "38 661 707 151",
    "businessLocation": {
      "postcode": 3153,
      "state": "VIC",
    },
    "name": "ACCELERATE RACING",
    "type": "Business Name",
  },
  {
    "abn": "32 576 195 721",
    "businessLocation": {
      "postcode": 3898,
      "state": "VIC",
    },
    "name": "ACCURATE RACING",
    "type": "Business Name",
  },
  {
    "abn": "48 950 417 828",
    "businessLocation": {
      "postcode": 4350,
      "state": "QLD",
    },
    "name": "ACE Racing",
    "type": "Business Name",
  },
  {
    "abn": "35 605 799 835",
    "businessLocation": {
      "postcode": 4036,
      "state": "QLD",
    },
    "name": "ACME RACING PTY LTD",
    "type": "Entity Name",
  },
  {
    "abn": "68 565 820 701",
    "businessLocation": {
      "postcode": 3340,
      "state": "VIC",
    },
    "name": "ACTION RACING",
    "type": "Trading Name",
  },
  {
    "abn": "64 961 002 359",
    "businessLocation": {
      "postcode": 4064,
      "state": "QLD",
    },
    "name": "ACTIVE RACING",
    "type": "Trading Name",
  },
  {
    "abn": "28 313 366 373",
    "businessLocation": {
      "postcode": 3173,
      "state": "VIC",
    },
    "name": "ACTON RACING",
    "type": "Business Name",
  },
  {
    "abn": "15 466 247 119",
    "businessLocation": {
      "postcode": 4516,
      "state": "QLD",
    },
    "name": "ADRENALIN RACING",
    "type": "Business Name",
  },
  {
    "abn": "50 164 508 187",
    "businessLocation": {
      "postcode": 4152,
      "state": "QLD",
    },
    "name": "ADT RACING PTY LTD",
    "type": "Entity Name",
  },
  {
    "abn": "14 115 911 638",
    "businessLocation": {
      "postcode": 5095,
      "state": "SA",
    },
    "name": "ADW RACING PTY. LTD.",
    "type": "Entity Name",
  },
  {
    "abn": "83 646 979 204",
    "businessLocation": {
      "postcode": 3977,
      "state": "VIC",
    },
    "name": "AGR RACING PTY LTD",
    "type": "Entity Name",
  },
  {
    "abn": "81 145 541 205",
    "businessLocation": {
      "postcode": 2209,
      "state": "NSW",
    },
    "name": "AGROS RACING",
    "type": "Business Name",
  },
  {
    "abn": "65 618 660 399",
    "businessLocation": {
      "postcode": 3104,
      "state": "VIC",
    },
    "name": "AGS RACING",
    "type": "Other Name",
  },
  {
    "abn": "40 980 295 393",
    "businessLocation": {
      "postcode": 5159,
      "state": "SA",
    },
    "name": "AH RACING",
    "type": "Trading Name",
  },
  {
    "abn": "30 168 941 633",
    "businessLocation": {
      "postcode": 2155,
      "state": "NSW",
    },
    "name": "AH RACING PTY LTD",
    "type": "Entity Name",
  },
  {
    "abn": "17 613 414 467",
    "businessLocation": {
      "postcode": 3664,
      "state": "VIC",
    },
    "name": "AIKEN RACING PTY LTD",
    "type": "Entity Name",
  },
  {
    "abn": "42 335 402 972",
    "businessLocation": {
      "postcode": 3663,
      "state": "VIC",
    },
    "name": "AJ RACING",
    "type": "Trading Name",
  },
]
`;

exports[`searchActive() should get the list company match with snapshot of 'Toy World Australia' 1`] = `
[
  {
    "abn": "43 165 614 120",
    "businessLocation": {
      "postcode": 3754,
      "state": "VIC",
    },
    "name": "Toy World Australia",
    "type": "Business Name",
  },
  {
    "abn": "71 645 258 251",
    "businessLocation": {
      "postcode": 2000,
      "state": "NSW",
    },
    "name": "T Australia",
    "type": "Business Name",
  },
  {
    "abn": "33 120 406 322",
    "businessLocation": {
      "postcode": 3000,
      "state": "VIC",
    },
    "name": "T-world Pty Ltd",
    "type": "Trading Name",
  },
  {
    "abn": "20 018 176 368",
    "businessLocation": {
      "postcode": 2605,
      "state": "ACT",
    },
    "name": "THE_T_AUS",
    "type": "Business Name",
  },
  {
    "abn": "56 107 469 634",
    "businessLocation": {
      "postcode": 3085,
      "state": "VIC",
    },
    "name": "TJR Australia Pty Ltd",
    "type": "Entity Name",
  },
  {
    "abn": "67 992 187 972",
    "businessLocation": {
      "postcode": 4300,
      "state": "QLD",
    },
    "name": "TA.TOY.",
    "type": "Business Name",
  },
  {
    "abn": "84 474 193 513",
    "businessLocation": {
      "postcode": 3040,
      "state": "VIC",
    },
    "name": "The Toy Company",
    "type": "Other Name",
  },
  {
    "abn": "83 156 577 258",
    "businessLocation": {
      "postcode": 2075,
      "state": "NSW",
    },
    "name": "Toycorp Pty Ltd",
    "type": "Entity Name",
  },
  {
    "abn": "68 166 658 019",
    "businessLocation": {
      "postcode": 6150,
      "state": "WA",
    },
    "name": "TAYCORP AUSTRALIA PTY LTD",
    "type": "Entity Name",
  },
  {
    "abn": "57 640 464 160",
    "businessLocation": {
      "postcode": 3128,
      "state": "VIC",
    },
    "name": "TY AUST PTY LTD",
    "type": "Entity Name",
  },
  {
    "abn": "50 098 373 329",
    "businessLocation": {
      "postcode": 2250,
      "state": "NSW",
    },
    "name": "TY AUSTRALIA, LLC",
    "type": "Entity Name",
  },
  {
    "abn": "73 454 521 026",
    "businessLocation": {
      "postcode": 3193,
      "state": "VIC",
    },
    "name": "Mr Teez Aus",
    "type": "Business Name",
  },
  {
    "abn": "30 884 134 983",
    "businessLocation": {
      "postcode": 4104,
      "state": "QLD",
    },
    "name": "TEE WORLD",
    "type": "Business Name",
  },
  {
    "abn": "14 351 811 594",
    "businessLocation": {
      "postcode": 4035,
      "state": "QLD",
    },
    "name": "TEE'Z AUSTRALIA",
    "type": "Business Name",
  },
  {
    "abn": "38 009 872 600",
    "businessLocation": {
      "postcode": 4207,
      "state": "QLD",
    },
    "name": "TEYS AUSTRALIA PTY LTD",
    "type": "Entity Name",
  },
  {
    "abn": "52 610 956 717",
    "businessLocation": {
      "postcode": 2030,
      "state": "NSW",
    },
    "name": "THEE AUSTRALIA PTY. LTD.",
    "type": "Entity Name",
  },
  {
    "abn": "44 634 989 527",
    "businessLocation": {
      "postcode": 5063,
      "state": "SA",
    },
    "name": "THIYES Australia",
    "type": "Business Name",
  },
  {
    "abn": "23 657 501 132",
    "businessLocation": {
      "postcode": 2145,
      "state": "NSW",
    },
    "name": "TOWIES AUSTRALIA PTY LTD",
    "type": "Entity Name",
  },
  {
    "abn": "63 128 617 961",
    "businessLocation": {
      "postcode": 6743,
      "state": "WA",
    },
    "name": "TOY WORLD KUNUNURRA",
    "type": "Trading Name",
  },
  {
    "abn": "72 164 700 618",
    "businessLocation": {
      "postcode": 2140,
      "state": "NSW",
    },
    "name": "TYZ AUSTRALIA PTY LTD",
    "type": "Entity Name",
  },
  {
    "abn": "38 127 066 693",
    "businessLocation": {
      "postcode": 3126,
      "state": "VIC",
    },
    "name": "Tiway Australia Pty Ltd",
    "type": "Entity Name",
  },
  {
    "abn": "73 524 832 390",
    "businessLocation": {
      "postcode": 4119,
      "state": "QLD",
    },
    "name": "Toy Warehouse Australia",
    "type": "Business Name",
  },
  {
    "abn": "77 096 700 720",
    "businessLocation": {
      "postcode": 3850,
      "state": "VIC",
    },
    "name": "SALE TOY WORLD",
    "type": "Trading Name",
  },
  {
    "abn": "62 619 629 006",
    "businessLocation": {
      "postcode": 2581,
      "state": "NSW",
    },
    "name": "TOY THEODORES AUSTRALIA",
    "type": "Business Name",
  },
  {
    "abn": "87 065 440 477",
    "businessLocation": {
      "postcode": 2540,
      "state": "NSW",
    },
    "name": "TOY WORLD - VINCENTIA",
    "type": "Business Name",
  },
  {
    "abn": "52 172 532 672",
    "businessLocation": {
      "postcode": 6170,
      "state": "WA",
    },
    "name": "The Trustee for THE TJR HOLDINGS AUSTRALIA TRUST",
    "type": "Entity Name",
  },
  {
    "abn": "79 286 096 543",
    "businessLocation": {
      "postcode": 4455,
      "state": "QLD",
    },
    "name": "AUSTRALIAN TEEZ",
    "type": "Trading Name",
  },
  {
    "abn": "59 350 979 299",
    "businessLocation": {
      "postcode": 2259,
      "state": "NSW",
    },
    "name": "TEENY TOY POODLES AUSTRALIA",
    "type": "Business Name",
  },
  {
    "abn": "29 660 130 834",
    "businessLocation": {
      "postcode": 2111,
      "state": "NSW",
    },
    "name": "THE TOY BOX AUS PTY LTD",
    "type": "Entity Name",
  },
  {
    "abn": "94 063 886 199",
    "businessLocation": {
      "postcode": 3149,
      "state": "VIC",
    },
    "name": "TOY & HOBBY AUSTRALIA",
    "type": "Business Name",
  },
  {
    "abn": "54 563 092 061",
    "businessLocation": {
      "postcode": 2759,
      "state": "NSW",
    },
    "name": "TOY DEALS AUSTRALIA",
    "type": "Business Name",
  },
  {
    "abn": "55 673 238 009",
    "businessLocation": {
      "postcode": 2759,
      "state": "NSW",
    },
    "name": "TOY DEALS AUSTRALIA PTY LTD",
    "type": "Entity Name",
  },
  {
    "abn": "15 113 216 756",
    "businessLocation": {
      "postcode": 5072,
      "state": "SA",
    },
    "name": "TOY JOY AUSTRALIA PTY LTD",
    "type": "Entity Name",
  },
  {
    "abn": "43 660 403 494",
    "businessLocation": {
      "postcode": 3149,
      "state": "VIC",
    },
    "name": "Toy Mart Australia",
    "type": "Business Name",
  },
  {
    "abn": "25 001 145 179",
    "businessLocation": {
      "postcode": 2228,
      "state": "NSW",
    },
    "name": "AUSTRALIAN TOY DISTRIBUTORS",
    "type": "Business Name",
  },
  {
    "abn": "37 122 445 121",
    "businessLocation": {
      "postcode": 2229,
      "state": "NSW",
    },
    "name": "AUSTRALIAN TOY DISTRIBUTORS PTY LTD",
    "type": "Entity Name",
  },
  {
    "abn": "71 601 738 176",
    "businessLocation": {
      "postcode": 2609,
      "state": "ACT",
    },
    "name": "TOY HAULER AUSTRALIA PTY LTD",
    "type": "Entity Name",
  },
  {
    "abn": "33 670 558 068",
    "businessLocation": {
      "postcode": 2153,
      "state": "NSW",
    },
    "name": "ACES TOY WORLD PTY LTD",
    "type": "Entity Name",
  },
  {
    "abn": "43 660 403 494",
    "businessLocation": {
      "postcode": 3149,
      "state": "VIC",
    },
    "name": "TOY KINGDOM AUSTRALIA PTY LTD",
    "type": "Entity Name",
  },
  {
    "abn": "37 126 456 764",
    "businessLocation": {
      "postcode": 4069,
      "state": "QLD",
    },
    "name": "WICKED TOYS AUSTRALIA PTY. LTD.",
    "type": "Entity Name",
  },
]
`;
